# CubeCoach

./: .gitignore  CMakeLists.txt  CubeCoachInstaller.nsi  LICENSE.txt  app_icon.rc  readme.md
include/: RubiksCubeBitboard.hpp  Settings.hpp  Setup.hpp  UI_button.hpp  app_input.hpp  application.hpp  bitwiseCube.hpp  cube_functions.hpp  default.hpp  fastCube.hpp  menu.hpp  piece.hpp  solver.hpp  textRenderer.hpp  textbox.hpp  texture.hpp  visualCube.hpp
resources/: Controls.txt  OLL.txt  PLL.txt  Settings.txt  solution.txt
resources/shaders/: text.vert
src/: Settings.cpp  main.cpp
